Fix RatingStar on mobile, improve sendEmail api route

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,6 +55,7 @@ button.btn-click::before {
   transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
     box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
 }
+/* Button Hover */
 button.btn-click:hover {
   background: var(--pink);
   transform: translate(0, 0.25em);
@@ -63,6 +64,7 @@ button.btn-click:hover::before {
   box-shadow: 0 0 0 2px var(--pink-border), 0 0.5em 0 0 var(--pink-shadow);
   transform: translate3d(0, 0.5em, -1em);
 }
+/* Button Active */
 button.btn-click:active {
   background: var(--pink);
   transform: translate(0em, 0.75em);
@@ -71,6 +73,16 @@ button.btn-click:active::before {
   box-shadow: 0 0 0 2px var(--pink-border), 0 0 var(--pink-shadow);
   transform: translate3d(0, 0, -1em);
 }
+/* Button Active (DISABLED) */
+button.btn-click:disabled:active {
+  background: var(--pink);
+  transform: translate(0, 0.55em);
+}
+button.btn-click:disabled:active::before {
+  box-shadow: 0 0 0 2px var(--pink-border), 0 0.5em 0 0 var(--pink-shadow);
+  transform: translate3d(0, 0.25em, -1em);
+}
+
 button.btn-click svg {
   height: 14px;
 }
